# rustls

./: Cargo.toml
connect-tests/: Cargo.toml
examples/: Cargo.toml
provider-example/: Cargo.toml
rustls/: Cargo.toml
rustls/src/client/: builder.rs  tls13.rs
rustls/src/server/: tls13.rs
rustls/src/tls12/: mod.rs
