[workspace]
members = [
  # tests and example code
  "examples",
  # the main library and tests
  "rustls",
]
exclude = ["admin/rustfmt"]
resolver = "2"

[patch.crates-io]
ring = { git = "https://github.com/wasix-org/ring.git", branch = "wasix" }
mio = { git = "https://github.com/wasix-org/mio.git", branch = "wasix" }
