[workspace]
members = [
  # CI benchmarks
  "ci-bench",
  # Network-based tests
  "connect-tests",
  # tests and example code
  "examples",
  # the main library and tests
  "rustls",
  # example of custom provider
  "provider-example",
]
default-members = [
  "examples",
  "rustls",
]
exclude = ["admin/rustfmt"]
resolver = "2"

# [workspace.dependencies]
# wasix = { version = "=0.2.18" }

[patch.crates-io]
ring = { git = "https://github.com/wasix-org/ring.git", branch = "wasix" }
