[package]
name = "rustls-examples"
version = "0.0.1"
edition = "2021"
license = "Apache-2.0 OR ISC OR MIT"
description = "Rustls example code and tests."
publish = false

[features]
dangerous_configuration = ["rustls/dangerous_configuration"]
quic = ["rustls/quic"]

[dependencies]
docopt = "~1.1"
env_logger = "0.10"
log = { version = "0.4.4" }
mio = { version = "0.8", features = ["net", "os-poll"] }
rustls = { path = "../rustls", features = ["logging"] }
rustls-pemfile = "1.0.3"
sct = "0.7.1"
serde = "1.0"
serde_derive = "1.0"
webpki-roots = "0.25.2"
webpki = { package = "rustls-webpki", version = "=0.101.7" }

[dev-dependencies]
regex = "1.0"
ring = "0.17.5"
